20250831 - 0135 - Added logo: * Further Changes

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,8 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: '<img src="/media/logo.png" alt="Valentin Pfeil Consulting" style="height:40px;">'
+      #text: "Your Name"
 
 # Site footer
 footer:
