20250831 - 0147 - Corrected logo: * Further Changes

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,8 +36,8 @@ header:
     show_theme_chooser: false
     # BRAND / LOGO
     logo:
-      image: /media/logo.png          # path relative to /assets/media
-      image_dark: /media/logo.png     # optional, for dark theme
+      image: assets/media/logo.png          # path relative to /assets/media
+      image_dark: assets/media/logo.png     # optional, for dark theme
       alt: "Valentin Pfeil Consulting"
       height: 40                      # px
       # text: ""                      # leave empty to hide text if your logo has text
