--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,11 +36,11 @@ header:
     show_theme_chooser: false
     # BRAND / LOGO
     logo:
-      image: assets/media/logo.png          # path relative to /assets/media
-      image_dark: assets/media/logo.png     # optional, for dark theme
+      image: logo.png
+      image_dark: logo.png
       alt: "Valentin Pfeil Consulting"
-      height: 40                      # px
-      # text: ""                      # leave empty to hide text if your logo has text
+      height: 40
+      text: ""
 
 # Site footer
 footer:
