--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -34,13 +34,14 @@ header:
     fixed_to_top: true
     show_search: true
     show_theme_chooser: false
-    # BRAND / LOGO
+  # BRAND / LOGO
     logo:
-      image: logo.png
-      image_dark: logo.png
+      # point to the file under /static (no leading slash)
+      image: /assets/media/logo.png
+      image_dark: /assets/media/logo.png    # or another dark-version if you have one
       alt: "Valentin Pfeil Consulting"
-      height: 40
-      text: ""
+      height: 40                    # px
+      text: ""                      # must be empty to hide “Your Name” text
 
 # Site footer
 footer:
