--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -34,14 +34,12 @@ header:
     fixed_to_top: true
     show_search: true
     show_theme_chooser: false
-  # BRAND / LOGO
-    logo:
-      # point to the file under /static (no leading slash)
-      image: media/logo.png
-      image_dark: media/logo.png    # or another dark-version if you have one
-      alt: "Valentin Pfeil Consulting"
-      height: 40                    # px
-      text: ""                      # must be empty to hide “Your Name” text
+  logo:
+    image: media/logo.png          # relativer Pfad zu /static
+    image_dark: media/logo.png     # optional für Dark Mode
+    alt: "Valentin Pfeil Consulting"
+    height: 40                     # px
+    text: ""                       # muss leer bleiben, sonst überschreibt Text das Logo
 
 # Site footer
 footer:
