--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,9 +37,7 @@ header:
 
     # Force HTML brand (your logo)
     brand_html: |
-      <img src="/media/logo.png"
-           alt="Valentin Pfeil Consulting"
-           style="height:40px; vertical-align:middle;">
+      <img src="/media/logo.png" vertical-align:middle;">
 
     # Make sure nothing else overrides the brand:
     logo:
