--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -46,9 +46,9 @@ footer:
   copyright:
     notice: '© {year} Valentin Pfeil. This work is licensed under {license}'
     license:
-      enable: false
+      enable: true
       allow_derivatives: false
-      share_alike: false
+      share_alike: true
       allow_commercial: false
 
 # Localization
