--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,8 +5,8 @@
 
 # Appearance
 appearance:
-  mode: system
-  color: emerald
+  mode: light
+  color: teal
 
 # SEO
 marketing:
@@ -69,6 +69,6 @@ features:
     enable: false
 
 # Test CSS
-assets:
-  css:
-    - "css/navlogo.css"
+#assets:
+#  css:
+#    - "css/navlogo.css"
