--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 appearance:
   mode: light
-  color: teal
+  color: zinc
 
 # SEO
 marketing:
@@ -49,7 +49,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Valentin Pfeil. This work is licensed under {license}'
+    notice: '© {year} Valentin Pfeil.' # This work is licensed under {license}
     license:
       enable: true
       allow_derivatives: false
