--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -69,7 +69,7 @@ features:
     enable: false
 
 # Site settings
-favicon: "/media/logo_mini.png"
+favicon: "/media/icon.png"
 
 #Activate academic icon pack extension
 extensions:
