--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,6 +15,7 @@ marketing:
 #    local_business_type: ''
     org_name: 'Valentin Pfeil'
     description: 'Cloud and Confidential Computing Consultant'
+    image: "media/icon.png"
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
