--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -81,6 +81,11 @@ extensions:
     enable: true
 
 # Test CSS
+assets:
+  css:
+    - "css/custom.css"
+
+# Test CSS
 #assets:
 #  css:
 #    - "css/navlogo.css"
