--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -51,7 +51,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Valentin Pfeil.' # This work is licensed under {license}
+    notice: '© {year} Valentin Pfeil. All rights reserved.' # This work is licensed under {license}
     license:
       enable: true
       allow_derivatives: false
