--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,6 +26,9 @@ main:
   - name: Projects
     url: projects/
     weight: 10
+  - name: Consulting
+    url: consulting/
+    weight: 5
 #  - name: Teaching
 #    url: teaching/
 #    weight: 40
