--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ hugo_stats.json
 
 # Dependencies
 node_modules/
+_vendor/
 
 # ============================================================================
 # Environment & Configuration
